2004-07-28  Johan Dahlin  <johan@gnome.org>

	* gobject/pygtype.c (pyg_type_from_object): If we're on python
	2.3, also check for PyBool_Type. Fixes #148684 (Steve Chaplin)

	* tests/gtype.py (GTypeTest.testBoolType): New test

2004-07-27  John Finlay  <finlay@moeraki.com>

	* gtk/gtk-types.c (pygdk_atom_compare) Remove.
	(pygdk_atom_richcompare) Implement with comparison to strings.
	(PyGdkAtom_Type) Set tp_compare to 0 and tp_richcompare to
	pygdk_atom_richcompare.
	Allow an Atom to be compared with a string. Fixes #148564.

2004-07-26  Johan Dahlin  <johan@gnome.org>

	* acinclude.m4: Remove, replaced with:
	
	* m4/jhflags.m4: New file, includes compiler macros

	* m4/python.m4: New file, includes python macros

	* autogen.sh: Copy over autogen.sh from gnome-common.h
	
	* gtk/__init__.py: Readd _gobject, but warn if it's used

2004-07-25  John Finlay  <finlay@moeraki.com>

	* gtk/pygtktreemodel.c (pygtk_generic_tree_model_get_value)
	Skip pyg_value_from_pyobject() if return value is Py_None.
	Fixes #148230.

2004-07-23  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.override (clipboard_request_text_cb) Fix bug when no text.
	(clipboard_request_targets_cb) Fix bug when no targets.

2004-07-23  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.override (_wrap_gtk_list_item_new): Add deprecation warning.

	* codegen/codegen.py (write_property_based_constructor): Honor the
	"deprecated" option.

2004-07-23  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.override (_wrap_gtk_dialog_new_with_buttons)
	(_wrap_gtk_message_dialog_new) 
	Use pyg_flags_get_value().

	* gtk/gtk-types.defs (TextSearchFlags) Fix typo.

	* gtk/gtktextview.override (_wrap_gtk_text_iter_forward_search)
	(_wrap_gtk_text_iter_backward_search)
	Use pyg_flags_get_value.
	
	* gtk/gtk-extrafuncs.defs (flags) (set_flags) (unset_flags)
	Use GtkWidgetFlags as args and return value.

2004-07-22  Johan Dahlin  <johan@gnome.org>

	* setup.py (MICRO_VERSION): 