@@ -1,5 +1,11 @@
 2004-07-28  Johan Dahlin  <johan@gnome.org>
 
+	* gobject/pygenum.c (pyg_enum_compare): 
+	* gobject/pygflags.c (pyg_flags_compare): Reverse operator
+
+	* tests/enum.py (FlagsTest.testComparision) 
+	(FlagsTest.testComparision): New tests
+
 	* gobject/pygtype.c (pyg_type_from_object): If we're on python
 	2.3, also check for PyBool_Type. Fixes #148684 (Steve Chaplin)
 
